2010-07-23  smeghead <smeghead@users.sourceforge.jp>

	* translated code comment.

2010-07-22  smeghead <smeghead@users.sourceforge.jp>

	* Bapt gave me the patch. use mkstemp instead of mktemp. Thank Bapt!

2010-06-30  smeghead <smeghead@users.sourceforge.jp>

	* Starbug1の公式サイトのドメインを取ったので、公式サイトのURLを変更した。

2010-06-17  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.14リリース

2010-06-16  smeghead <smeghead@users.sourceforge.jp>

	* id:argius さんからパッチを取り込んだ。(http://d.hatena.ne.jp/argius/20100605/1275714723)ありがとうございます。
	* boolが定義されている場合は、再定義しないようにした。
	* 64bit環境で実行時にsqlite3_prepareでエラーが発生する問題があり、64bit環
	境でも、32bitでコンパイルしていたが、Starbug1側のバグが原因であることがわ
	かったので、修正した。update_elementsのプロトタイプ宣言と実装で引数が間違
	っていたのが、根本原因だった。
	* 警告を回避する修正をした。

2010-06-02  smeghead <smeghead@users.sourceforge.jp>

	* 一覧に表示する時刻の分の桁が表示されない問題を修正した。sqlite3のsubstr
	関数の使い方の問題。

2010-05-30  smeghead <smeghead@users.sourceforge.jp>

	* Seleniumのテストに問題があったのを修正した。既に存在しているサブプロジェ
	クトに依存していたため、依存を削除した。

2010-05-29  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.13リリース

2010-05-29  smeghead <smeghead@users.sourceforge.jp>

	* hook機能で利用する一時ファイルを作成するディクレトリをtmpディレクトリに
	変更した。
	* hook機能で外部プログラムに渡すjsonのなかのURLのプロジェクトIDがurlencode
	されたものになっていなかったのを修正した。

2010-05-25  smeghead <smeghead@users.sourceforge.jp>

	* 登録された添付ファイルを一括で抜き出すスクリプトを作成した。

2010-05-24  smeghead <smeghead@users.sourceforge.jp>

	* メール送信用スクリプト実行のhook機能への情報の渡し方を、環境変数経由から
	、一時ファイル経由に変更した。一時ファイルを作成するディレクトリは検討の余
	地あり。

2010-05-18  smeghead <smeghead@users.sourceforge.jp>

	* Windows版でのhook実行時にエラーが発生する問題を修正。scriptのパスを生成
	する際に、/固定だったため、Windowsでは、エラーになっていた。

2010-05-10  smeghead <smeghead@users.sourceforge.jp>

	* 中国語のリソースファイルの修正。newcuteさんによるパッチとりこみ。
	thank you.

2010-04-17	smeghead  <smeghead@users.sourceforge.jp>

	* 1.3.12リリース

2010-04-17  smeghead <smeghead@users.sourceforge.jp>

	* Makefileのwebappターゲットのバグ修正。
	書き込み権限を付加する部分が機能していなかったのを修正した。
	* テンプレート「TODO」で項目を追加するとエラーが出るのを修正した。
	* INSTALLファイルのインストール方法をstatic版のインストー
	ル方法に変更した。にstatic版のインストール方法に変更した。