@@ -1,3 +1,9 @@
+2010-07-28  smeghead <smeghead@users.sourceforge.jp>
+
+	* add rel=nofollow to auto generated hyper links.
+	* only textarea field, generates hyper links. when display other elements,
+	don't generates hyper links.
+
 2010-07-23  smeghead <smeghead@users.sourceforge.jp>
 
 	* translated code comment.
